--- a/index.html
+++ b/index.html
@@ -278,7 +278,7 @@ TODO
                     <p class="footer-header">Projects</p>
                     <a class="footer-item" href="https://www.skyborne.net">skyborne.net</a><br/>
                     <a class="footer-item" href="https://rvrx.github.io/ParkerProjects">parkerprojects.info</a><br/>
-                    <a class="footer-item" href="https://lugubrious.rip">lugubrious.rip</a>
+<!--                     <a class="footer-item" href="https://lugubrious.rip">lugubrious.rip</a> -->
                 </div>
                 <div class="col">
                     <p class="footer-header">External Links</p>
