--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@ TODO
                         <div class="card-body">
                             <h5 class="card-title">Grailed+ (Browser Extension)</h5>
                             <h6 class="card-subtitle mb-2 text-muted">JavaScript<!-- | 2020--></h6>
-                            <p class="card-text">Enhancements for <a href="https://grailed.com">Grailed.com</a> listings, such as price history and expected price drop date. Available for <a href="https://addons.mozilla.org/en-US/firefox/addon/grailed-plus/">Firefox</a>, and coming to the Chrome Web Store soon.</p>
+                            <p class="card-text">Enhancements for <a href="https://grailed.com">Grailed.com</a> listings, such as price history and expected price drop date. Available for <a href="https://addons.mozilla.org/en-US/firefox/addon/grailed-plus/">Firefox</a>, and <a href="https://chrome.google.com/webstore/detail/grailed-plus/ipecfmmbppgpommpibaandmonmhohfnd?hl=en">Chrome</a>.</p>
                         </div>
                         <div class="card-footer mb-3">
                             <a href="https://github.com/RVRX/grailed-plus" class="card-link" target="_blank" rel="noreferrer noopener">view on github</a>
