--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@ TODO
 
         <div class="container item my-5 aos-init" data-aos="fade-right">
             <h3>Digitization Program Volunteer, <span class="secondary">Worcester Polytechnic Institute and Clark University</span></h3>
-            <h4>Jun 2020 - Present</h4>
+            <h4>Jun 2020 - Apr 2021</h4>
             <p>Helped small business clients decide on the web builder that fit their budget and met their needs. Worked directly with the clients in small teams of 2-3 and created new or updated websites for the clients. Arranged transfer of domain ownership from previous webmasters to new site. Educated clients on the use of their new website so that they would understand its operation after our team moved on.</p>
         </div>
         <div class="container item my-5 aos-init" data-aos="fade-right">
