Add info for GoICC + update SBDI date

--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@ TODO
 
         <div class="container item my-5 aos-init" data-aos="fade-right">
             <h3>Digitization Program Volunteer, <span class="secondary">Worcester Polytechnic Institute and Clark University</span></h3>
-            <h4>Jun 2020 - Apr 2021</h4>
+            <h4>Jun 2020 - Present</h4>
             <p>Helped small business clients decide on the web builder that fit their budget and met their needs. Worked directly with the clients in small teams of 2-3 and created new or updated websites for the clients. Arranged transfer of domain ownership from previous webmasters to new site. Educated clients on the use of their new website so that they would understand its operation after our team moved on.</p>
         </div>
         <div class="container item my-5 aos-init" data-aos="fade-right">
@@ -188,10 +188,28 @@ TODO
                                 <path d="M6.586 4.672A3 3 0 0 0 7.414 9.5l.775-.776a2 2 0 0 1-.896-3.346L9.12 3.55a2 2 0 0 1 2.83 2.83l-.793.792c.112.42.155.855.128 1.287l1.372-1.372a3 3 0 0 0-4.243-4.243L6.586 4.672z"/>
                             </svg></a></h5>
                             <h6 class="card-subtitle text-muted mb-2">2015 - Present</h6>
-                            <p class="card-text">A Website for The Skyborne, a Guns of Icarus Online clan.</p>
+                            <p class="card-text">A website for The Skyborne, a Guns of Icarus Online clan.</p>
                         </div>
                         <div class="card-footer">
                             <a class="btn btn-primary mb-3" data-toggle="modal" data-target="#skyborneModal">Details</a>
+                        </div>
+                    </div>
+                </div>
+
+                <!--GoICC.Skyborne.net Card-->
+                <div class="col col-md-4 mb-5">
+                    <div class="card m-2 h-100" data-aos="zoom-in">
+                        <img src="images/projects/skyborne/goicc-home-screenshot.png" class="card-img-top rounded-top" alt="Screenshot of GoICC.Skyborne.net">
+                        <div class="card-body">
+                            <h5 class="card-title"><a href="https://goicc.skyborne.net" class="no-style">GoICC.Skyborne.net <svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-link-45deg" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+                                <path d="M4.715 6.542L3.343 7.914a3 3 0 1 0 4.243 4.243l1.828-1.829A3 3 0 0 0 8.586 5.5L8 6.086a1.001 1.001 0 0 0-.154.199 2 2 0 0 1 .861 3.337L6.88 11.45a2 2 0 1 1-2.83-2.83l.793-.792a4.018 4.018 0 0 1-.128-1.287z"/>
+                                <path d="M6.586 4.672A3 3 0 0 0 7.414 9.5l.775-.776a2 2 0 0 1-.896-3.346L9.12 3.55a2 2 0 0 1 2.83 2.83l-.793.792c.112.42.155.855.128 1.287l1.372-1.372a3 3 0 0 0-4.243-4.243L6.586 4.672z"/>
+                            </svg></a></h5>
+                            <h6 class="card-subtitle text-muted mb-2">2021 - Present</h6>
+                            <p class="card-text">Project website for my <em>Guns of Icarus Caster Companion</em> application.</p>
+                        </div>
+                        <div class="card-footer">
+                            <a class="btn btn-primary mb-3" data-toggle="modal" data-target="#goiccModal">Details</a>
                         </div>
                     </div>
                 </div>
@@ -213,6 +231,19 @@ TODO
         <div class="container item my-lg-5 mb-5">
             <h3 class="aod-init aos-animate" data-aos="fade-up">Other Languages</h3>
             <div class="row justify-content-start row-cols-auto">
+                <!--GoICC (github) Card-->
+                <div class="col col-md-4 mb-5">
+                    <div class="card h-100" data-aos="zoom-in">
+                        <div class="card-body">
+                            <h5 class="card-title">GoI Caster Companion (Desktop Application)</h5>
+                            <h6 class="card-subtitle mb-2 text-muted">Java, JavaFX, ...<!-- | 2021--></h6>
+                            <p class="card-text">A tool built to help Guns of Icarus (GoI) tournament broadcasters easily manage team names, logos, maps, and timers in their stream overlay.</p>
+                        </div>
+                        <div class="card-footer mb-3">
+                            <a href="https://github.com/RVRX/GoICasterCompanion#readme" class="card-link" target="_blank" rel="noreferrer noopener">view on github</a>
+                        </div>
+                    </div>
+                </div>
                 <!--Grailed+ Card-->
                 <div class="col col-md-4 mb-5">
                     <div class="card h-100" data-aos="zoom-in">
@@ -276,7 +307,8 @@ TODO
                 </div>
                 <div class="col">
                     <p class="footer-header">Projects</p>
-                    <a class="footer-item" href="https://www.skyborne.net">skyborne.net</a><br/>
+                    <a class="footer-item" href="https://goicc.skyborne.net">goicc.skyborne.net</a><br/>
+                    <a class="footer-item" href="https://skyborne.net">skyborne.net</a><br/>
                     <a class="footer-item" href="https://rvrx.github.io/ParkerProjects">parkerprojects.info</a><br/>
 <!--                     <a class="footer-item" href="https://lugubrious.rip">lugubrious.rip</a> -->
                 </div>
@@ -307,6 +339,21 @@ TODO
                 <p>In 2017 I decided to code the site anew, getting away from the Weebly past, and came up with <a href="https://web.archive.org/web/20170411135002/http:/skyborne.net/">this</a> (some icons are missing). I introduced myself to PHP while trying to get the site to automatically propagate our VODs from a databased location (not sure if I ever accomplished that idea in full).</p>
                 <p>Sometime after that, in around 2018-2019, I cleaned that design up, and left just the logo and buttons (Currently don&rsquo;t have an archived view to show). Around this time, the forum died off from a lack of reason to use it with the advent of Discord messaging, and more active use of our Mumble VOIP server.</p>
                 <p>In 2020, the site evolved to it&rsquo;s current stage. This was my first fully responsive website (I finally learned how to use bootstrap for not just pretty form fields). A lot of the knowledge I gained from my Senior Project site, parkerprojects.info (now <a href="https://rvrx.github.io/ParkerProjects/">rvrx.github.io/ParkerProjects</a>) helped me realize this site in full. Namely responsiveness and columns from Bootstrap and simple animations from the Animate.css library. New to this site, and my inspiration to update it, was the addition of our newly commissioned clan avatar, which we all found very entertaining, so of course we needed to show it off on our site to all 25 of the still active Guns of Icarus players.</p>
+            </div>
+        </div>
+    </div>
+</div>
+<div class="modal fade" id="goiccModal" data-keyboard="false" tabindex="-1" aria-labelledby="skyborneModalLabel" aria-hidden="true">
+    <div class="modal-dialog modal-lg">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="staticBackdropGoiccLabel">About GoICC.Skyborne.net</h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            <div class="modal-body">
+                <p>The site for the <em>GoI Caster Companion</em> application serves as a home for the project's information-space. It holds the grabber content to get people interested to use the app, the feature-list, stable download links, and user documentation. It also serves as a gateway to the GitHub repository where GoICC is developed.</p>
             </div>
         </div>
     </div>
