--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@ TODO
             <div class="col" id="head-shot-col"><img src="images/headshotProm.jpg" alt="Head Shot of Cole Manning." class="img-fluid rounded-lg px-lg-5"></div>
             <div class="col">
                 <h2 id="about" data-aos="fade-left" class="aos-init">About</h2>
-                <p>I'm a 20-year-old College student currently attending Worcester Polytechnic Institute (Class of ’23), majoring in Computer science and pursuing a Management Information Systems (MIS) minor. To see the classes I’ve taken thus far at WPI, <a href="docs/courses.pdf" target="_blank">click here</a>. I’ve been working on websites since 2015, and have experience with both coding from scratch and popular web builders such as Weebly and Squarespace. Outside of web development, I also have experience in C and Java.</p>
+                <p>I'm a 21-year-old college student currently attending Worcester Polytechnic Institute (Class of ’23), majoring in Computer Science. To see the classes I’ve taken thus far at WPI, <a href="docs/courses.pdf" target="_blank">click here</a>. I’ve been working on websites since 2015, and have experience with both coding from scratch and popular web builders such as Weebly and Squarespace. Outside of web development, I also have experience in C and Java.</p>
                 <p id="socials" class="text-center">
                     <a href="https://github.com/RVRX"><i class="fab fa-github mx-sm-3"></i></a>
                     <a href="https://www.linkedin.com/in/colemanning/"><i class="fab fa-linkedin-in mx-sm-3"></i></a>
@@ -109,7 +109,7 @@ TODO
 
         <div class="container item my-5 aos-init" data-aos="fade-right">
             <h3>Digitization Program Volunteer, <span class="secondary">Worcester Polytechnic Institute and Clark University</span></h3>
-            <h4>Jun 2020 - July 2021</h4>
+            <h4>Jun 2020 - Present</h4>
             <p>Helped small business clients decide on the web builder that fit their budget and met their needs. Worked directly with the clients in small teams of 2-3 and created new or updated websites for the clients. Arranged transfer of domain ownership from previous webmasters to new site. Educated clients on the use of their new website so that they would understand its operation after our team moved on.</p>
         </div>
         <div class="container item my-5 aos-init" data-aos="fade-right">
@@ -137,7 +137,7 @@ TODO
         <div class="container item my-5" data-aos="fade-left">
             <h3>Computer Science, <span class="secondary">Worcester Polytechnic Institute</span></h3>
             <h4>Class of 2023</h4>
-            <p>GPA of 3.60 in Freshman year. Expecting to Minor in Management Information Systems (MIS). Highlighted Classes: Algorithms, Object Oriented Design Concepts (Java), System Programming Concepts (C/C++); <a href="docs/courses.pdf" target="_blank">See All</a>.</p>
+            <p>GPA of 3.74. Highlighted Classes: Algorithms, Object Oriented Design Concepts (Java), System Programming Concepts (C/C++); <a href="docs/courses.pdf" target="_blank">See All</a>.</p>
         </div>
         <div class="container item my-5" data-aos="fade-right">
             <h3>High School Diploma, <span class="secondary">Francis W. Parker Charter Essential School</span></h3>
