Update job bios, add highland

--- a/index.html
+++ b/index.html
@@ -115,17 +115,22 @@ TODO
         <div class="container item my-5 aos-init" data-aos="fade-right">
             <h3>Computer Lab Assistant, <span class="secondary">Worcester Polytechnic Institute</span></h3>
             <h4>Oct 2019 - Present</h4>
-            <p>Setting up and troubleshooting newly purchased laptops and PCs (imaging, adding to domain, installing necessary drivers and requested software). Assisting professors, graduate students, and other employees with their machines and any technical issues or questions that they might have about WPI equipment, and working on an requests they might have.</p>
+            <p>Use knowledge of computer systems to work with faculty, staff, and students at both the undergrad and graduate levels on day-to-day and maintenance tasks for their, and WPI's, technology. Complete time sensitive projects and communicate with those involved. Research solutions to new and existing problems to streamline operations. Coordinate delivery and pickup of requested machines and instruments for ME and ECE departments.</p>
         </div>
         <div class="container item my-5 aos-init" data-aos="fade-left">
             <h3>Library Page, <span class="secondary">Hazen Memorial Library</span></h3>
             <h4>Sep 2015 - Aug 2019</h4>
-            <p>Primarily tasked with book shelving, but also carried out general library duties, including assisting patrons with library computers and any questions they might have, library cleanup, weeding of old books, pulling holds, and other miscellaneous tasks.</p>
+            <p>Primarily tasked with book shelving, but also carried out general library duties, including assisting patrons with library computers and any questions they might have, library cleanup, weeding of old books, pulling inter-library loans, and other miscellaneous tasks.</p>
         </div>
         <div class="container item my-5 aos-init" data-aos="fade-right">
-            <h3>Summer IT Assistant, <span class="secondary">Francis W. Parker Charter Essential School</span></h3>
+            <h3>IT Assistant, <span class="secondary">Francis W. Parker Charter Essential School</span></h3>
             <h4>Jun 2017 - Aug 2019</h4>
-            <p>General IT support to teachers, and maintenance tasks including, running new Fiber/Ethernet cabling connections to routers and switches, replacing and re-imaging hard drives, and cleaning & troubleshooting of school computers, printers, and miscellaneous technology. This position was held full time during the summer, along with occasional weekdays during the school year when the IT team needed a hand.</p>
+            <p>Offered general IT support to students and teachers, along with technology maintenance tasks such as running new fiber cabling network equipment, replacing and re-imaging hard drives, and cleaning and troubleshooting of school computers, printers, and miscellaneous technology. This position was held full time during the summer, along with occasional weekdays during the school year when the IT team needed help with a time sensitive task.</p>
+        </div>
+        <div class="container item my-5 aos-init" data-aos="fade-left">
+            <h3>Store Clerk, <span class="secondary">Highland Liquors of Worcester</span></h3>
+            <h4>Aug 2021 - Present</h4>
+            <p>Work as a store clerk, manning the register and Mass Lottery system, along with stocking the shelves. Work is done alongside a typical one or two other employees.</p>
         </div>
         <hr/>
     </div>
