Update footer links

--- a/index.html
+++ b/index.html
@@ -311,14 +311,14 @@ TODO
                     <a class="footer-item" href="#edu-anchorpoint">Education</a>
                 </div>
                 <div class="col">
-                    <p class="footer-header">Projects</p>
-                    <a class="footer-item" href="https://goicc.skyborne.net">goicc.skyborne.net</a><br/>
+                    <p class="footer-header">Sites</p>
+                    <a class="footer-item" href="https://goicc.skyborne.net">GoICC.skyborne.net</a><br/>
                     <a class="footer-item" href="https://skyborne.net">skyborne.net</a><br/>
-                    <a class="footer-item" href="https://rvrx.github.io/ParkerProjects">parkerprojects.info</a><br/>
+                    <a class="footer-item" href="https://users.wpi.edu/~cmanning/">users.wpi.edu/~cmanning</a><br/>
 <!--                     <a class="footer-item" href="https://lugubrious.rip">lugubrious.rip</a> -->
                 </div>
                 <div class="col">
-                    <p class="footer-header">External Links</p>
+                    <p class="footer-header">Links</p>
                     <a class="footer-item" href="https://linkedin.com/in/colemanning">linkedin.com/in/colemanning/</a><br/>
                     <a class="footer-item" href="https://github.com/RVRX">https://github.com/RVRX</a><br/>
                     <a class="footer-item" href="docs/resume.pdf">Resume Download</a><br/>
