--- a/index.html
+++ b/index.html
@@ -142,8 +142,9 @@ TODO
         <div class="container item my-5" data-aos="fade-left">
             <h3>Computer Science, <span class="secondary">Worcester Polytechnic Institute</span></h3>
             <h4>Class of 2023</h4>
-            <p>GPA of 3.74. Highlighted Classes: Algorithms, Object Oriented Design Concepts (Java), System Programming Concepts (C/C++); <a href="docs/courses.pdf" target="_blank">See All</a>.</p>
-        </div>
+            <p>GPA of 3.75. Highlighted Classes: Algorithms, Object Oriented Design Concepts (Java), System Programming Concepts (C/C++); <a href="docs/courses.pdf" target="_blank">See All</a>.</p>
+            <p>Member of Upsilon Pi Epsilon, Computer Science Honor Society.</p>
+	</div>
         <div class="container item my-5" data-aos="fade-right">
             <h3>High School Diploma, <span class="secondary">Francis W. Parker Charter Essential School</span></h3>
             <h4>Class of 2019</h4>
