add MojoTech job

--- a/index.html
+++ b/index.html
@@ -106,7 +106,11 @@ TODO
     <span id="xp-anchorpoint"></span>
     <div class="container" id="xp-container">
         <h2 id="xp" data-aos="fade-up" class="aos-init">Job Experience</h2>
-
+        <div class="container item my-5 aos-init" data-aos="fade-left">
+            <h3>Software Engineer Intern, <span class="secondary">MojoTech</span></h3>
+            <h4>May 2022 - Aug 2022</h4>
+            <p>Joined intern team in development of company’s open-source web applications. Apps were built in Elixir with the Phoenix framework. Git style was atomic commits with regular rebasing to keep a clean git tree. Helped peer-review other interns pull requests before they were allowed to merge into production branch.</p>
+        </div>
         <div class="container item my-5 aos-init" data-aos="fade-right">
             <h3>Digitization Program Volunteer, <span class="secondary">Worcester Polytechnic Institute and Clark University</span></h3>
             <h4>Jun 2020 - Present</h4>
