--- a/index.html
+++ b/index.html
@@ -91,7 +91,8 @@ TODO
             <div class="col" id="head-shot-col"><img src="images/headshotProm.jpg" alt="Head Shot of Cole Manning." class="img-fluid rounded-lg px-lg-5"></div>
             <div class="col">
                 <h2 id="about" data-aos="fade-left" class="aos-init">About</h2>
-                <p>I'm a 21-year-old college student currently attending Worcester Polytechnic Institute (Class of ’23), majoring in Computer Science. To see the classes I’ve taken thus far at WPI, <a href="docs/courses.pdf" target="_blank">click here</a>. I’ve been working on websites since 2015, and have experience with both coding from scratch and popular web builders such as Weebly and Squarespace. Outside of web development, I also have experience in C and Java.</p>
+                <p>I'm a 23-year-old college student recently graduated from Worcester Polytechnic Institute (Class of ’23), with a Computer Science degree. To see the classes I’ve taken at WPI, <a href="docs/courses.pdf" target="_blank">click here</a>.</p>
+                <p><b>I'm most active on my blog, over at <a href="https://blog.rvrx.dev">blog.rvrx.dev</a></b></p>
                 <p id="socials" class="text-center">
                     <a href="https://github.com/RVRX"><i class="fab fa-github mx-sm-3"></i></a>
                     <a href="https://www.linkedin.com/in/colemanning/"><i class="fab fa-linkedin-in mx-sm-3"></i></a>
@@ -169,6 +170,25 @@ TODO
         <div class="container item my-5">
             <h3 data-aos="fade-up">Websites</h3>
             <div class="row justify-content-start row-cols-auto">
+
+
+                <!--Blog Card-->
+                <div class="col col-md-4 mb-5">
+                    <div class="card m-2 h-100" data-aos="zoom-in">
+                        <img src="images/projects/blog/Screenshot_Blog.png" class="card-img-top" alt="Parker Projects Screenshot">
+                        <div class="card-body">
+                            <h5 class="card-title"><a href="https://blog.rvrx.dev/" class="no-style">blog.rvrx.dev <svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-link-45deg" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+                                <path d="M4.715 6.542L3.343 7.914a3 3 0 1 0 4.243 4.243l1.828-1.829A3 3 0 0 0 8.586 5.5L8 6.086a1.001 1.001 0 0 0-.154.199 2 2 0 0 1 .861 3.337L6.88 11.45a2 2 0 1 1-2.83-2.83l.793-.792a4.018 4.018 0 0 1-.128-1.287z"/>
+                                <path d="M6.586 4.672A3 3 0 0 0 7.414 9.5l.775-.776a2 2 0 0 1-.896-3.346L9.12 3.55a2 2 0 0 1 2.83 2.83l-.793.792c.112.42.155.855.128 1.287l1.372-1.372a3 3 0 0 0-4.243-4.243L6.586 4.672z"/>
+                            </svg></a></h5>
+                            <h6 class="card-subtitle text-muted mb-2">2022 - Present</h6>
+                            <p class="card-text">My blog! Come see what projects I'm working on. Originally made with my own custom static site generator, but recently migrated over to 11ty.</p>
+                        </div>
+                        <div class="card-footer">
+                            <a class="btn btn-primary mb-3" data-toggle="modal" data-target="#blogModal">Details</a>
+                        </div>
+                    </div>
+                </div>
 
                 <!--ParkerProjects Card-->
                 <div class="col col-md-4 mb-5">
@@ -379,6 +399,21 @@ TODO
             </div>
             <div class="modal-body">
                 <p>Parker Projects was the product of my Senior Project at my high school, <a href="https://www.theparkerschool.org/">Parker</a>. Originally live at parkerprojects.info, a demo of the site can now be found at <a href="https://rvrx.github.io/ParkerProjects/">rvrx.github.io/ParkerProjects</a> In short, It&rsquo;s a web application that dynamically shows user pages based on a database filled with user submitted info (Info about my peer&rsquo;s senior projects). By nature of being a school project, you&rsquo;ll find plenty of documentation on my project on its <a href="https://rvrx.github.io/ParkerProjects/about.html">about page</a>. For anyone interested in seeing the final implementation, live with my actual peer&rsquo;s projects, it is still live and hidden away on the WWW, so let me know. Same goes for my project exhibition.</p>
+            </div>
+        </div>
+    </div>
+</div>
+<div class="modal fade" id="blogModal" data-keyboard="false" tabindex="-1" aria-labelledby="blogModalLabel" aria-hidden="true">
+    <div class="modal-dialog modal-lg">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="staticBackdropBlogLabel">About blog.rvrx.dev</h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            <div class="modal-body">
+                <p>Currently going through some development with this. It was originally a Python script that would build the static pages with some string concatenation, but that got pretty messy. Moving everything over to 11ty now, with mild success</p>
             </div>
         </div>
     </div>
