--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@ TODO
             <div class="col" id="head-shot-col"><img src="images/headshotProm.jpg" alt="Head Shot of Cole Manning." class="img-fluid rounded-lg px-lg-5"></div>
             <div class="col">
                 <h2 id="about" data-aos="fade-left" class="aos-init">About</h2>
-                <p>I'm a 23-year-old college student recently graduated from Worcester Polytechnic Institute (Class of ’23), with a Computer Science degree. To see the classes I’ve taken at WPI, <a href="docs/courses.pdf" target="_blank">click here</a>.</p>
+                <p>I'm a 23-year-old developer recently graduated from Worcester Polytechnic Institute (Class of ’23), with a Computer Science degree. To see the classes I’ve taken at WPI, <a href="docs/courses.pdf" target="_blank">click here</a>.</p>
                 <p><b>I'm most active on my blog, over at <a href="https://blog.rvrx.dev">blog.rvrx.dev</a></b></p>
                 <p id="socials" class="text-center">
                     <a href="https://github.com/RVRX"><i class="fab fa-github mx-sm-3"></i></a>
@@ -147,7 +147,7 @@ TODO
         <div class="container item my-5" data-aos="fade-left">
             <h3>Computer Science, <span class="secondary">Worcester Polytechnic Institute</span></h3>
             <h4>Class of 2023</h4>
-            <p>GPA of 3.75. Highlighted Classes: Algorithms, Object Oriented Design Concepts (Java), System Programming Concepts (C/C++); <a href="docs/courses.pdf" target="_blank">See All</a>.</p>
+            <p>GPA of 8.82. Highlighted Classes: Algorithms, Object Oriented Design Concepts (Java), System Programming Concepts (C/C++); <a href="docs/courses.pdf" target="_blank">See All</a>.</p>
             <p>Member of Upsilon Pi Epsilon, Computer Science Honor Society.</p>
 	</div>
         <div class="container item my-5" data-aos="fade-right">
