update rvrx.dev info, remove WPI userspace link

--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@ TODO
             <div class="col">
                 <h2 id="about" data-aos="fade-left" class="aos-init">About</h2>
                 <p>I'm a 23-year-old developer recently graduated from Worcester Polytechnic Institute (Class of ’23), with a Computer Science degree. To see the classes I’ve taken at WPI, <a href="docs/courses.pdf" target="_blank">click here</a>.</p>
-                <p><b>I'm most active on my blog, over at <a href="https://blog.rvrx.dev">blog.rvrx.dev</a></b></p>
+                <p><b>I'm most active on my blog, over at <a href="https://www.rvrx.dev/blog">rvrx.dev</a></b></p>
                 <p id="socials" class="text-center">
                     <a href="https://github.com/RVRX"><i class="fab fa-github mx-sm-3"></i></a>
                     <a href="https://www.linkedin.com/in/colemanning/"><i class="fab fa-linkedin-in mx-sm-3"></i></a>
@@ -182,7 +182,7 @@ TODO
                                 <path d="M6.586 4.672A3 3 0 0 0 7.414 9.5l.775-.776a2 2 0 0 1-.896-3.346L9.12 3.55a2 2 0 0 1 2.83 2.83l-.793.792c.112.42.155.855.128 1.287l1.372-1.372a3 3 0 0 0-4.243-4.243L6.586 4.672z"/>
                             </svg></a></h5>
                             <h6 class="card-subtitle text-muted mb-2">2022 - Present</h6>
-                            <p class="card-text">My blog! Come see what projects I'm working on. Originally made with my own custom static site generator, but recently migrated over to 11ty.</p>
+                            <p class="card-text">My blog! Come see what projects I'm working on. Originally made with my own custom static site generator, but then migrated over to 11ty, and finally gave up and just went back to hard-coding everything.</p>
                         </div>
                         <div class="card-footer">
                             <a class="btn btn-primary mb-3" data-toggle="modal" data-target="#blogModal">Details</a>
@@ -251,7 +251,7 @@ TODO
                             Current Projects
                         </div>
                         <div class="card-body">
-                            <p class="card-text">I'm currently working as a volunteer worker for WPI's <a href="https://www.wpi.edu/academics/business/resources/small-business" target="_blank" rel="noreferrer noopener">Small Business Digitization Services</a>, working in a group to modernize and upgrade client's websites.</p>
+                            <p class="card-text">I'm currently active over on my blog, which can be found on my new website <a href="https://www.rvrx.dev">rvrx.dev</a>.</p>
                         </div>
                     </div>
                 </div>
@@ -339,7 +339,7 @@ TODO
                     <p class="footer-header">Sites</p>
                     <a class="footer-item" href="https://goicc.skyborne.net">GoICC.skyborne.net</a><br/>
                     <a class="footer-item" href="https://skyborne.net">skyborne.net</a><br/>
-                    <a class="footer-item" href="https://users.wpi.edu/~cmanning/">users.wpi.edu/~cmanning</a><br/>
+                    <a class="footer-item" href="https://www.rvrx.dev">rvrx.dev</a><br/>
 <!--                     <a class="footer-item" href="https://lugubrious.rip">lugubrious.rip</a> -->
                 </div>
                 <div class="col">
@@ -414,6 +414,7 @@ TODO
             </div>
             <div class="modal-body">
                 <p>Currently going through some development with this. It was originally a Python script that would build the static pages with some string concatenation, but that got pretty messy. Moving everything over to 11ty now, with mild success</p>
+                <p>UPDATE AUG '23: A new design (again)! Hopefully less niche and jarring than the last. Aiming to phase out colermanning.com, in favor of rvrx.dev, so the site is no longer just a blog.</p>
             </div>
         </div>
     </div>
